jsonschemadsl2ecore.trafo.opt/test/test97/validtests/example2.test97
{
	"prop1":["foo",1,null],
	"prop2":["foo"],
	"prop3":{}
} 