jsonschemadsl2ecore.trafo.opt/test/test97/invalidtests/example4.test97
{
	"prop1":["too few items"],
	"prop2":["foo"],
	"prop3":["bar"]
} 